<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/acceuil">

    <fragment
        android:id="@+id/menuEquipe"
        android:name="fr.android.gameplace_app.EquipeFragment"
        android:label="Mon Equipe"
        tools:layout="@layout/fragment_equipe" />
    <fragment
        android:id="@+id/menuProfile"
        android:name="fr.android.gameplace_app.ProfilFragment"
        android:label="@string/profil"
        tools:layout="@layout/fragment_profil" />
    <fragment
        android:id="@+id/menuStats"
        android:name="fr.android.gameplace_app.StatsFragment"
        android:label="@string/stats"
        tools:layout="@layout/fragment_stats" />
    <fragment
        android:id="@+id/menuPhoto"
        android:name="fr.android.gameplace_app.menuPhoto"
        android:label="@string/prendrePhotos"
        tools:layout="@layout/fragment_menu_photo" />
    <fragment
        android:id="@+id/acceuil"
        android:name="fr.android.gameplace_app.AcceuilFragment"
        android:label="@string/acceuil"
        tools:layout="@layout/fragment_acceuil" />
    <fragment
        android:id="@+id/lang_param"
        android:name="fr.android.gameplace_app.Param_LangageFragment"
        android:label="@string/tite_langage_param"
        tools:layout="@layout/fragment_param__langage" />
</navigation>